remove floating point number support