@@ -1,15 +1,12 @@
 package org.tdf.lotusvm;
 
-import org.tdf.lotusvm.runtime.HostFunction;
 import org.tdf.lotusvm.runtime.Memory;
 import org.tdf.lotusvm.runtime.UnsafeMemory;
 import org.tdf.lotusvm.runtime.UnsafeStackAllocator;
-import org.tdf.lotusvm.types.FunctionType;
 import org.tdf.lotusvm.types.Module;
 
 import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.Collections;
+import java.nio.file.Paths;
 
 public class Bench {
     private static final String WBI_MALLOC = "__malloc";
@@ -19,36 +16,6 @@ public class Bench {
     public static final int MAX_LABELS = MAX_FRAMES * 64;
     public static final int MAX_CALL_DEPTH = 8;
 
-    private static final long UINT_256 = 0xec13d6d1L; // keccak(uint256)
-    private static final long ADDRESS = 0x421683f8L; // keccak(address)
-    private static final long STRING = 0x97fc4627L; // keccak(string)
-    private static final long BYTES = 0xb963e9b4L; // keccak(bytes)
-
-    public static int mallocInternal(ModuleInstance ins, long type, byte[] bin) {
-        long ptr = ins.execute(WBI_MALLOC, bin.length)[0];
-        ins.getMemory().put((int) ptr, bin);
-        long p = ins.execute(WBI_CHANGE_TYPE, type, ptr, bin.length)[0];
-        int r = (int) p;
-        if (r < 0) throw new RuntimeException("malloc failed: pointer is negative");
-        return r;
-    }
-
-
-    private static int mallocBytes(ModuleInstance ins, byte[] bin) {
-        return mallocInternal(ins, BYTES, bin);
-    }
-
-    public static class EmptyHost extends HostFunction {
-
-        public EmptyHost(String name) {
-            super(name, new FunctionType(Collections.emptyList(), Collections.emptyList()));
-        }
-
-        @Override
-        public long execute(long[] parameters) {
-            return 0;
-        }
-    }
 
     // ops = 0.58
     // rust wasmer ops = 8.06451
@@ -59,7 +26,7 @@ public class Bench {
             .getFile();
         int loop = 10;
 
-        byte[] data = Files.readAllBytes(Path.of(file));
+        byte[] data = Files.readAllBytes(Paths.get(file));
         Module m = new Module(data);
 
 
